--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@nuxtjs/proxy": "^2.0.1",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "nuxt": "^2.13.0",
-    "nuxt-buefy": "^0.3.31"
+    "nuxt-buefy": "^0.3.31",
+    "nuxt-fullpage.js": "0.0.3"
   },
   "devDependencies": {}
 }
